Cleaning the ITs